--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@
 	<head>
 		<title>Islands of AVAX | A Collection of NFT islands with an Economic Simulation only on the AVAX Avalanche Network</title>
 		<meta charset="utf-8" />
+		<!--
+		<meta property="og:title" content="Islands of AVAX | Collection of NFT Islands + Economic Simulation Game on AVAX">
+		<meta property="og:description" content="A Collection of NFT islands with an Economic Simulation only on the AVAX Avalanche Network.">
+		<meta property="og:image" content="https://islandsofavax.com/images/medium-lumber-island.png">
+		<meta property="og:url" content="https://islandsofavax.com/index.htm">
+		<meta name="twitter:card" content="summary_large_image">
+		<meta property="og:site_name" content="Islands of AVAX">
+		-->
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
@@ -22,7 +30,7 @@
 				<nav id="nav">
 					<ul>
 						<li class="current"><a href="index.html">Home</a></li>
-						<li><a href="#">Launching October</a></li>
+						<li><a href="gameplay.html">Gameplay</a></li>
 						<li>
 							<a href="#">Community</a>
 							<ul>
@@ -45,10 +53,9 @@
 					<div class="content">
 						<h2>The Islands of AVAX</h2>
 						<p>An original NFT collection of 2000 NFT islands.</p>
-						<p>Powered by the Avalanche (AVAX) Blockchain and sold exclusive on</p>
-						<p><img src="images/nftrade-logo.png" alt="" style="width:200px;height:30px;"/></p>						
+						<p>Powered by the Avalanche (AVAX) Blockchain and sold exclusively on NFtrade</p>
 						<ul>
-							<li class="button scrolly">Launching October</li>
+							<li class="button scrolly">Launching Mid October</li>
 						</ul>
 					</div>
 				</section>
@@ -63,7 +70,7 @@
 									<section class="box highlight">
 										<ul class="special">
 											<li><img src="images/small-desert-island.png" alt="" style="width:200px;height:200px;"/></li>
-											<li><img src="images/small-mountain-island.png" alt="" style="width:200px;height:200px;"/></li>
+											<li><img src="images/small-mountain-island-dev.png" alt="" style="width:200px;height:200px;"/></li>
 											<li><img src="images/medium-lumber-island.png" alt="" style="width:200px;height:200px;"/></li>
 											<li><img src="images/Islands-of-Avax-Demo.gif" alt="" style="width:200px;height:200px;"/></li>
 										</ul>
@@ -81,13 +88,28 @@
 											Will you preserve their natural beauty or will you build industries to meet the growing needs of the island cities?
 										</p>
 									</section>
+									<!-- Features -->
+									<section class="box features">
+										<h2 class="major"><span>Backstory</span></h2>
+										<p>
+											With the success of development programs AVALANACHE RUSH bringing in massive growth to the lands of AVAX, the people of AVAX found themselves with the issue of getting enough resources to fuel and power the rapid development. With the mainland region fully developed and the high cost of ETH gas fees making it hard to import resources, the administration of President Emin Gün Sirer has decided to turn their focus to developing the island archipelago region of AVAX. 
+											</p><p>
+											Codenamed Island Rush, the program is aimed at developing the undeveloped and resource rich island archipelago region which is in dire need of development and bridging. Plans for new cities have been drawn up and industrialist/builders from all around the world are invited to partake in the great development project. 
+											Many have answered the call of President Emin Gün Sirer from industrialists looking bid on islands to start new ventures all the way to working families eager to relocate to new cities and work the resource rich islands. Large multinational conglomerates such as the GB Group and Ape Inc. are making plans to become dominant players in the region. 
+										</p><p>
+											Whether you are building bridges to toll, developing industries on the islands, managing needs at population centers or running for governor, there are many of opportunities for anyone to establish themselves at the Islands of AVAX. 
+										</p>
+									</section>
 
+									
 							</div>
 							<div class="col-12">
 
 								<!-- Features -->
 									<section class="box features">
 										<h2 class="major"><span>Islandnomics</span></h2>
+										<p>Islands of AVAX goes beyond just a NFT with islands. Players receive monthly airdrops of in game token and NFTs to simulate economic activities. A global DAO fund is established with presale proceeds generating a perpetual monthly budget to make this possible.  Players may participate in the DAO governance to advise the direction of the project and use of fund. </p>
+
 										<div>
 											<div class="row">
 												<div class="col-3 col-6-medium col-12-small">
@@ -131,49 +153,72 @@
 													<!-- Feature -->
 														<section class="box feature">
 															<img src="images/capitol-island.png" alt="" style="width:200px;height:200px;"/>
-															<h3>Project DAO (Proposed)</h3>
+															<h3>Project DAO</h3>
 															<p>
-																A portion of the sale proceeds will go towards a perpetual fund. Monthly revenue from the perpetual will go towards the simluation of the economic activity (Eg. Token Airdrops & other NFT airdrops) 
+																A portion of the sale proceeds will go towards a perpetual fund. Monthly revenue from the perpetual will be paid out to players in the form of economic activity (Eg. Token Airdrops & other NFT airdrops) 
 															</p>
 														</section>
 
 												</div>
 											</div>
 										</div>
+
+
+										<h3>Play2Earn Economic Simulation</h3>
+										<p>
+											Ownership of island NFts and relevant NFts allows participation in the economic simulation which grants a monthly airdrop/deposit of in game token and NFts.  payouts is based on the IEU produced for the month relative to all IEU produced by all players in the game. 
+											The bigger your island industrial empire, the bigger your pay out will be. District Governors receive up to 10% (adjustable) of all deposits within their districts in the form of a district tax. 
+										</p><p>
+											Simulation payouts are made during the first week of each month using on chain data at the close of the preceeding month. (Future version will allow instant payouts)
+										</p>
+										
+										<section class="box highlight">
+										<a href="gameplay.html" class="button alt large">More on DAO & Economic Simulation</a>
+										</section>
+
 									</section>
 							</div>
 						</div>
 					</div>
 				</section>
 
+
+			<!-- Roadmap--> 
+			<section id="main2">
+				<div class="container">
+						<h2 class="major"><span>Roadmap</span></h2>
+						<h3>Prelaunch</h3>
+						<p>
+							Islands of AVAX will be launching with a number of prize giveaways on social media. Be sure to follow us on <a href="https://twitter.com/islandsofavax">Twitter</a> and  <a href="https://t.me/islandsofavax">Telegram</a> to not miss out. 
+						</p>
+						<h3>NFT Launch</h3>
+						<p>
+							Islands will be minted and released in batches of 100 on NFTrade starting at 1 AVAX each and are claimed on a first come first serve basis. 
+							All islands are listed under specific district and regions, 5% of island sales proceeds will go to the District Governors as district tax. 
+							A portion of the presale proceeds becomes the DAO fund and will go into an interest yielding platform (eg. AAVE/CRV etc...).											 
+						</p> 
+						<h3>Economic Simulator</h3>
+						<p>
+							Land plot NFTs are airdropped to urban island owners (3 residential plots per urban island or 8 per district governor) & buildings options are available to players. 
+							Revenue from the DAO gaming fund will be distributed to island holders to simulate economic activity.
+							Island owners start receiving token/NFT airdrops as part of the economic simulation (See <a href="gameplay.html">gameplay secton</a> on how in game payout is calculated). 
+						</p>
+						<h3>Play to Earn game</h3>
+						<p>Advanced mechanics are included piece by piece as the simulation becomes a play to earn game. 
+							Features includes: Resource commodities trading, food, tariffs, population management, staking, bridges & tolling, manufacturing plants (Turns resources into NFTs), district policies, district powerups and more to come. 
+						</p>
+						<h3>Game Governance & DAO</h3>
+						<p>
+							Island owners can participate in the project DAO voting on project direction and additional game mechanics. 
+							Federal governance option opens up allowing more gameplay options. 
+						</p>
+				</div>
+			</section>
+
 			<!-- Footer -->
 				<footer id="footer">
 					<div class="container">
 						<div class="row gtr-200">
-							<div class="col-12">
-
-								<!-- Roadmap--> 
-									<section>
-										<h2 class="major"><span>Roadmap</span></h2>
-										<h3>Prelaunch</h3>
-										<p>
-											Islands of AVAX will be launching with a number of prize giveaways on social media. Be sure to follow us on <a href="https://twitter.com/islandsofavax">Twitter</a> and  <a href="https://t.me/islandsofavax">Telegram</a> to not miss out. 
-										</p>
-										<h3>Launch</h3>
-										<p>
-											We will be launching on NFTrade.com. Islands will be minted and released in batches, priced from 1 AVAX each and are claimed on a first come first serve basis. 
-										</p> 
-										<h3>Economic Simulator (Proposed)</h3>
-										<p>
-											A gaming fund made of a portion of the presale revenue will be put into an interest yielding platform (eg. AAVE/CRV etc...). Revenue from the DAO gaming fund will be distributed to island holders to simulate economic activity (specifics to be announced).
-										</p>
-										<h3>District and Federal Regional Governance</h3>
-										<p>
-											All islands are classified to specific district and federal regions, players may opt to be distict or regional governors and receive a % of ecomoic activity of all players within their region. They also can set policies from taxes to developmental incentives as well as construct district infrastructures to improve overall district economic output.  
-										</p>
-								</section>
-
-							</div>
 							<div class="col-12">
 								<!-- Contact -->
 									<section>
