--- a/gameplay.html
+++ b/gameplay.html
@@ -117,7 +117,7 @@
 											Example: For the month of May, you have a total of 3 IEU. There is a total of 100 IEU from all qualifying players this month. You receive 2.7% of the monthly airdrop during the first week of June (3% of 100 IEU in play —10% District Tax).
 										</p>
 										<h3>Payouts Summary</h3>
-											<img src="images/islands-summary.jpg" alt=""/>
+											<a href="images/islands-summary.jpg"><img src="images/islands-summary.jpg" alt=""/></a>
 										<p><b>Future Feature:</b> Depending on the export partner of the month, payouts may vary (eg. If the Island archipelago region has a trade deal with the Republic of Good Bridging, $GB will be dropped that month) </p>
 									</section>
 
@@ -189,7 +189,7 @@
 
 											<h3>How they interact with each other</h3>
 											<p>In order to qualify for monthly airdrops, you need to be holding 1 Urban building, 1 resident building and 1 resource/urban island at the time of snapshot calculation. Each set of 3 you hold grants you one Island Economic Unit.</p>
-											<img src="images/islands-summary.jpg" alt=""/>
+											<a href="images/islands-summary.jpg"><img src="images/islands-summary.jpg" alt=""/></a>
 
 
 
@@ -262,7 +262,7 @@
 						</p> 
 						<h3>Economic Simulator</h3>
 						<p>
-							Land plot NFts are airdropped to urban island owners (3 residential plots per urban island or 8 per district governor) & buildings options are available to players. 
+							Land plot NFTs are airdropped to urban island owners (3 residential plots per urban island or 8 per district governor) & buildings options are available to players. 
 							Revenue from the DAO gaming fund will be distributed to island holders to simulate economic activity.
 							Island owners start receiving token/NFT airdrops as part of the economic simulation (See <a href="gameplay.html">gameplay secton</a> on how in game payout is calculated). 
 						</p>
