--- a/gameplay.html
+++ b/gameplay.html
@@ -29,8 +29,8 @@
 			<!-- Nav -->
 				<nav id="nav">
 					<ul>
-						<li class="current"><a href="index.html">Home</a></li>
-						<li><a href="gameplay.html">Gameplay</a></li>
+						<li><a href="index.html">Home</a></li>
+						<li class="current"><a href="gameplay.html">Gameplay</a></li>
 						<li>
 							<a href="#">Community</a>
 							<ul>
