--- a/bridges.html
+++ b/bridges.html
@@ -21,7 +21,7 @@
 			<!-- Nav -->
 				<nav id="nav">
 					<ul>
-						<li class="current"><a href="#">Home</a></li>
+						<li class="current2"><a href="#">Home</a></li>
 						<li><a href="https://app.nftrade.com/assets/avalanche/0xa6d4bc9500315bb3ee12ef507bf7fb54bfb0805c">Market</a></li>
 						<li>
 							<a href="#">Community</a>
