--- a/index.html
+++ b/index.html
@@ -215,6 +215,133 @@
 				</div>
 			</section>
 
+			<section id="main">
+				<div class="container">
+					<h2 class="major"><span>Frequently Asked Questions</span></h2>
+					<div class="container">
+						<button class="accordion">What is Island of AVAX?</button>
+						<div class="panel">
+						<p>
+							Islands of AVAX goes beyond just a NFT with islands. Players receive monthly airdrops of in game token and NFTs to simulate economic activities. A global DAO fund is established with presale proceeds generating a perpetual monthly budget to make this possible. Players may participate in the DAO governance to advise the direction of the project and use of fund.
+						</p>
+						</div>
+
+						<button class="accordion">When will the economic simulation release?</button>
+						<div class="panel">
+						<p>The NFT will be launched mid october. The economic simulation and monthly payouts will start in the first half of 2022 with more and more economic components added over time.</p>
+						</div>
+
+						<button class="accordion">How much can I make in Island of AVAX?</button>
+						<div class="panel">
+						<p>
+							Note that Islands of AVAX NFT series is first and foremost an artistic NFT collection of islands and not an investment or security of any form. 
+							Players who participate in the simulation do so because they love econoimc simulations and the NFT art. 
+							One should not be expecting to make any returns from this game.
+						</p>
+						</div>
+
+						<button class="accordion">How complex is the economic simulation?</button>
+						<div class="panel">
+						<p>
+							There are multiple phases in the economic simulation. 
+							The first phase is simply ensuring that islands have workers on them. 
+							The next phase consists of island resource management (eg. Food for workers, wood for building more houses etc...).
+							The final stage will have an open market where players can buy and sell resources from one another.
+						</p>
+						</div>
+
+						<button class="accordion">What are Island Economic Units (IEU)? How do I get them?</button>
+						<div class="panel">
+						<p>
+							Island Econoimc Units (IEU) are the basic measurement of economic activitiy within the archipelago region. The player's monthly in game token airdrop is based on their IEU relative to all other players in the game. 
+							<br>
+							<br>
+							In the first stage of the simulation where most essentail resources such as food & building materials are supplied by the mainland, players must have 1 island, 1 resident plot and 1 residential building to generate 1 IEU.
+							<br>
+							<br>
+							As the game progresses, players will need to meet population needs (food & entertainment) before workers are willing to work. Export destinations will stop accepting raw resources and will start demanding finished goods for IEU.
+						</p>
+						</div>
+
+						<button class="accordion">What are land plots? How do I acquire them?</button>
+						<div class="panel">
+						<p>
+							Land plots (Urban land plots) are limited land NFTs airdropped to urban island owners (Settlement, towns or district capitals). 
+							Urban plots come in the following types: Residential, Industrial and Government. Urban island owners are free to resell their urban plots on the open market. 
+						<br>
+						<br>
+							Residential plots are required to construct residences for workers to work the resource islands. 
+							Industrial plots can be used to build manufacturing plants in the later stages of the simulation which turns resources into building NFTs.  
+							Government plots are used to build district powerup buildings which increases overall district traits. 
+						</p>
+						</div>
+
+						<button class="accordion">What are governor roles? How do I become a governor?</button>
+						<div class="panel">
+						<p>
+							The archipelago region is divided into 20 districts of 100 islands each. Each district has a district capital where the District Governor (DG) resides in. 
+							Whoever owns the district capital becomes the DG and is entitled to 5% of island presale revenue within the district and can levy up to 10% of what players make within the district. 
+							Only the district governor can erect district powerups (by holding a Government tile and district powerup) which boosts the output of all players within the district.  
+						</p><p>	
+							District governors play a major role in shaping the game lore and the project direction through the Council of Governors. 
+							Many in game events may occur due to governor votes from adjusting island availiabilty (Lifting or lowering the 2000 island cap), secession from the Motherland (More output for all players), appointing of a Federal president and more.
+						</p>
+						</div>
+
+						<button class="accordion">How does this project generate the funding for the monthly payouts?</button>
+						<div class="panel">
+						<p>
+							For starters, we cannot promise guarnateed payouts as this is foremost an artistic project with an economic simluation as an experiment. 
+							<br>
+							<br>
+							Unlike other projects, our mission is to gamify the defi space by putting a % of presale funds into trusted defi projects such as AAVE, Curve and set up mining rigs to generate monthly the funds to buy in game tokens to airdrop to players.  
+							Players are encouraged to use the in game tokens to grow their industrial empires and experience the game to the fullest. 
+							<br>
+							<br>
+							Note that the DAO fund and monthly simulation payouts will vary and are exposed to different types of risks from security risks on AAVE/Curve, liquidation from volatility, risks of mining rig becoming outdated and many more. The team decided to diversify across different platforms to minimize risks that could affect monthly Payouts.   
+						</p>
+						</div>
+
+						<button class="accordion">Do you have any perks for $GB token holders?</button>
+						<div class="panel">
+						<p>
+							To all the GB holders out there, GM and GB to you all!<br>
+							The Islands region is bordered by different neighbouring regions and the Good Bridging Kingdom is one of them. As there are no centralized global trading currency in the game, exports made to the GB kingdom will be paid in GB tokens which are distributed to qualifying players. 
+							<br><br>
+							There will be some launch perks for the GB community from GB exclusive giveaways to private auction of a few rare islands and the GB token as an in game reward token. 
+							<br>
+							GB players are welcomed to form a conglomerate of GB industrialists when renting/leasing mechanics open up, start scholarship programs or band up and participate in regional politics (forming the GB party and electing a GB president).<br>
+						</p>
+						</div>
+
+						<button class="accordion">What happens after 2000 islands are minted?</button>
+						<div class="panel">
+						<p>
+							The game started off with a limit of 2000 islands but this cap can be adjusted should the council of governors vote to start an expedition to explore new lands (New islands granted to the most supportive districts.). 
+							Alternatively, industrialists can fund a private expedition through minting component expedition NFTs in their manufacturing plants. (New islands granted to the industrialists based on component contribution.) 
+						</p>
+						</div>
+
+						<button class="accordion">Is it true that there's a story and players can particiapte in it?</button>
+						<div class="panel">
+						<p>
+							Every NFT collection has a story, however most project teams abandon the story after minting. 
+							Being gamers and Roleplayers at heart, we believe in co-writing the story with the players. 
+							The archipelago region is full of wonders and mysteries as well as the surrounding neighbouring regions.  
+							<br>
+							<br>
+							From time to time, players will be asked to vote on major decisions which will unravel the plot further and further. 
+							While govenors can affect some of the plots, we also have events and stories for players and player groups.   
+							We encourage players to form conglomerates and trading guilds to experience the storyline together.  
+						</p>
+						</div>
+
+
+
+					</div>
+				</div>
+			</section>
+
 			<!-- Footer -->
 				<footer id="footer">
 					<div class="container">
