--- a/index.html
+++ b/index.html
@@ -166,10 +166,10 @@
 
 										<h3>Play2Earn Economic Simulation</h3>
 										<p>
-											Ownership of island NFts and relevant NFts allows participation in the economic simulation which grants a monthly airdrop/deposit of in game token and NFts.  payouts is based on the IEU produced for the month relative to all IEU produced by all players in the game. 
+											Ownership of island NFTs and relevant NFTs allows participation in the economic simulation which grants a monthly airdrop/deposit of in game token and NFts.  payouts is based on the IEU produced for the month relative to all IEU produced by all players in the game. 
 											The bigger your island industrial empire, the bigger your pay out will be. District Governors receive up to 10% (adjustable) of all deposits within their districts in the form of a district tax. 
 										</p><p>
-											Simulation payouts are made during the first week of each month using on chain data at the close of the preceeding month. (Future version will allow instant payouts)
+											Simulation payouts are made during the first week of each month using on chain data at the close of the preceeding month. (Future version will allow more flexible payouts)
 										</p>
 										
 										<section class="box highlight">
@@ -210,7 +210,7 @@
 						<h3>Game Governance & DAO</h3>
 						<p>
 							Island owners can participate in the project DAO voting on project direction and additional game mechanics. 
-							Federal governance option opens up allowing more gameplay options. 
+							Federal governance option opens up allowing more gameplay options including exploration of new islands, declaring indepedence and choosing new trading partners. 
 						</p>
 				</div>
 			</section>
@@ -246,7 +246,7 @@
 							There are multiple phases in the economic simulation. 
 							The first phase is simply ensuring that islands have workers on them. 
 							The next phase consists of island resource management (eg. Food for workers, wood for building more houses etc...).
-							The final stage will have an open market where players can buy and sell resources from one another.
+							The final stage will have an open market where players can buy and sell resources from one another. There will also be story driven elements and missions for everyone to participate in.
 						</p>
 						</div>
 
@@ -298,7 +298,7 @@
 							Players are encouraged to use the in game tokens to grow their industrial empires and experience the game to the fullest. 
 							<br>
 							<br>
-							Note that the DAO fund and monthly simulation payouts will vary and are exposed to different types of risks from security risks on AAVE/Curve, liquidation from volatility, risks of mining rig becoming outdated and many more. The team decided to diversify across different platforms to minimize risks that could affect monthly Payouts.   
+							Note that the DAO fund and monthly simulation payouts will vary depending on market condition and are exposed to different types of risks from security risks on AAVE/Curve, liquidation from volatility, risks of mining rig becoming outdated and many more. The team has decided to diversify across different platforms to minimize risks that could affect monthly Payouts.   
 						</p>
 						</div>
 
@@ -322,6 +322,15 @@
 						</p>
 						</div>
 
+						<button class="accordion">Who are the people behind the Islands of AVAX?</button>
+						<div class="panel">
+						<p>
+							The team behind the Islands of AVAX are crypto fanatics and gamers at heart. 
+							We are huge fans of economic simulations (Eg. Sim City, Workers & Resources: Soviet Republic, Civilization, Hearts of Iron etc...) and believe that the blockchain is the next playing field for some of our favourite games out there.
+							We want to go beyond making NFTs with zero backstory and create the ultimate story driven economic simulation game ever made. We welcome inputs from players and may even recruit the most active players to be part of our advisory committee.
+						</p>
+						</div>
+
 						<button class="accordion">Is it true that there's a story and players can particiapte in it?</button>
 						<div class="panel">
 						<p>
@@ -331,7 +340,8 @@
 							<br>
 							<br>
 							From time to time, players will be asked to vote on major decisions which will unravel the plot further and further. 
-							While govenors can affect some of the plots, we also have events and stories for players and player groups.   
+							While govenors can affect some of the plots, we also have events and stories for players and player groups. 
+							There will also be global challenges and storylines where any players can make a contribution and impact.    
 							We encourage players to form conglomerates and trading guilds to experience the storyline together.  
 						</p>
 						</div>
