--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 									<section class="box features">
 										<h2 class="major"><span>Backstory</span></h2>
 										<p>
-											With the success of development programs AVALANACHE RUSH bringing in massive growth to the lands of AVAX, the people of AVAX found themselves with the issue of getting enough resources to fuel and power the rapid development. With the mainland region fully developed and the high cost of ETH gas fees making it hard to import resources, the administration of President Emin Gün Sirer has decided to turn their focus to developing the island archipelago region of AVAX. 
+											With the success of development programs AVALANCHE RUSH bringing in massive growth to the lands of AVAX, the people of AVAX found themselves with the issue of getting enough resources to fuel and power the rapid development. With the mainland region fully developed and the high cost of ETH gas fees making it hard to import resources, the administration of President Emin Gün Sirer has decided to turn their focus to developing the island archipelago region of AVAX. 
 											</p><p>
 											Codenamed Island Rush, the program is aimed at developing the undeveloped and resource rich island archipelago region which is in dire need of development and bridging. Plans for new cities have been drawn up and industrialist/builders from all around the world are invited to partake in the great development project. 
 											Many have answered the call of President Emin Gün Sirer from industrialists looking bid on islands to start new ventures all the way to working families eager to relocate to new cities and work the resource rich islands. Large multinational conglomerates such as the GB Group and Ape Inc. are making plans to become dominant players in the region. 
@@ -234,9 +234,9 @@
 						<button class="accordion">How much can I make in Island of AVAX?</button>
 						<div class="panel">
 						<p>
-							Note that Islands of AVAX NFT series is first and foremost an artistic NFT collection of islands and not an investment or security of any form. 
-							Players who participate in the simulation do so because they love econoimc simulations and the NFT art. 
-							One should not be expecting to make any returns from this game.
+							<strong>Note that Islands of AVAX NFT series is first and foremost an artistic NFT collection of islands and <u>not an investment or security of any form.</u></strong> 
+							Players who participate in the simulation do so because they love the NFT arts and want to be part of the economic simulation that goes with it. 
+							One should not be expecting to make any returns from this game. 
 						</p>
 						</div>
 
@@ -284,14 +284,14 @@
 							Only the district governor can erect district powerups (by holding a Government tile and district powerup) which boosts the output of all players within the district.  
 						</p><p>	
 							District governors play a major role in shaping the game lore and the project direction through the Council of Governors. 
-							Many in game events may occur due to governor votes from adjusting island availiabilty (Lifting or lowering the 2000 island cap), secession from the Motherland (More output for all players), appointing of a Federal president and more.
+							Many in game events may occur due to governor votes from adjusting island availability (Lifting or lowering the 2000 island cap), secession from the Motherland (More output for all players), appointing of a Federal president and more.
 						</p>
 						</div>
 
 						<button class="accordion">How does this project generate the funding for the monthly payouts?</button>
 						<div class="panel">
 						<p>
-							For starters, we cannot promise guarnateed payouts as this is foremost an artistic project with an economic simluation as an experiment. 
+							For starters, we cannot promise guaranteed payouts as this is foremost an artistic project with an economic simulation as an experiment, not an investment/security. 
 							<br>
 							<br>
 							Unlike other projects, our mission is to gamify the defi space by putting a % of presale funds into trusted defi projects such as AAVE, Curve and set up mining rigs to generate monthly the funds to buy in game tokens to airdrop to players.  
@@ -340,7 +340,7 @@
 							<br>
 							<br>
 							From time to time, players will be asked to vote on major decisions which will unravel the plot further and further. 
-							While govenors can affect some of the plots, we also have events and stories for players and player groups. 
+							While governors can affect some of the story line, we also have events and stories for players and player groups. 
 							There will also be global challenges and storylines where any players can make a contribution and impact.    
 							We encourage players to form conglomerates and trading guilds to experience the storyline together.  
 						</p>
