--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 											Codenamed Island Rush, the program is aimed at developing the undeveloped and resource rich island archipelago region which is in dire need of development and bridging. Plans for new cities have been drawn up and industrialist/builders from all around the world are invited to partake in the great development project. 
 											Many have answered the call of President Emin Gün Sirer from industrialists looking bid on islands to start new ventures all the way to working families eager to relocate to new cities and work the resource rich islands. Large multinational conglomerates such as the GB Group and Ape Inc. are making plans to become dominant players in the region. 
 										</p><p>
-											Whether you are building bridges to toll, developing industries on the islands, managing needs at population centers or running for governor, there are many of opportunities for anyone to establish themselves at the Islands of AVAX. 
+											Whether you are building bridges to toll, developing industries on the islands, managing needs at population centers or running for governor, there are many opportunities for anyone to establish themselves at the Islands of AVAX. 
 										</p>
 									</section>
 
