--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 							<ul>
 								<li><a href="https://twitter.com/islandsofavax">Twitter</a></li>
 								<li><a href="https://t.me/islandssofavax">Telegram</a></li>
+								<li><a href="https://discord.gg/u4VRNh5eSP">Discord</a></li>
 							</ul>
 						</li>
 						<li>
@@ -363,6 +364,7 @@
 										<ul class="contact">
 											<li><a class="icon brands fa-twitter" href="https://twitter.com/islandsofavax"><span class="label">Twitter</span></a></li>
 											<li><a class="icon brands fa-telegram" href="https://t.me/islandsofavax"><span class="label">Telegram</span></a></li>
+											<li><a class="icon brands fa-discord" href="https://discord.gg/u4VRNh5eSP"><span class="label">Discord</span></a></li>
 										</ul>
 									</section>
 							</div>
