--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 							<a href="#">Community</a>
 							<ul>
 								<li><a href="https://twitter.com/islandsofavax">Twitter</a></li>
-								<li><a href="https://t.me/islandssofavax">Telegram</a></li>
+								<li><a href="https://t.me/islandsofavax">Telegram</a></li>
 								<li><a href="https://discord.gg/u4VRNh5eSP">Discord</a></li>
 							</ul>
 						</li>
@@ -53,7 +53,7 @@
 				<section id="banner2">
 					<div class="content">
 						<h2>The Islands of AVAX</h2>
-						<p>An original NFT collection of 2000 NFT islands.</p>
+						<p>An original NFT collection of 2000 NFT islands with utility in a Play 2 Earn game.</p>
 						<p>Powered by the Avalanche (AVAX) Blockchain and sold exclusively on NFtrade</p>
 						<ul>
 							<li class="button scrolly">Launching Mid October</li>
@@ -85,7 +85,7 @@
 											<p>Ready to be collected and traded</p>
 										</header>
 										<p>
-											The Islands of AVAX is an archipelago of islands rich full of untapped resources and  developmental opportunites. Island cities are eager for food and resources and there are research rich islands waiting to be collected.
+											The Islands of AVAX is an archipelago of islands rich full of untapped resources and  developmental opportunities. Island cities are eager for food and supplies and resource rich islands waiting to be collected and developed.
 											Will you preserve their natural beauty or will you build industries to meet the growing needs of the island cities?
 										</p>
 									</section>
