--- a/island-index.html
+++ b/island-index.html
@@ -36,7 +36,7 @@
 							<a href="#">Community</a>
 							<ul>
 								<li><a href="https://twitter.com/islandsofavax">Twitter</a></li>
-								<li><a href="https://t.me/islandssofavax">Telegram</a></li>
+								<li><a href="https://t.me/islandsofavax">Telegram</a></li>
 								<li><a href="https://discord.gg/u4VRNh5eSP">Discord</a></li>
 							</ul>
 						</li>
